[package]
name = "carcassone"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["cargo", "derive"] }
clipboard-rs = "0.2.2"
ggez = "0.9.3"
glam = { version = "0.24.2", features = ["serde"] }
lazy_static = "1.5.0"
log = { version = "0.4.25", features = ["std"] }
rand = "0.8.5"
serde = "1.0.217"
slotmap = { version = "1.0.7", features = ["serde"] }
