[package]
name = "carcassone"
version = "1.5.0"
edition = "2021"
authors = ["maurdekye"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["cargo", "derive"] }
clipboard-rs = "0.2.2"
ggez = { git = "https://github.com/Maurdekye/ggez.git", branch = "devel" }
glam = { version = "0.29", features = ["serde"] }
lazy_static = "1.5.0"
log = { version = "0.4.25", features = ["std"] }
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.138"
slotmap = { version = "1.0.7", features = ["serde"] }
ggez-no-re = { path = "ggez-no-re", features = ["const_logger"] }
discord-sdk = "0.4.0"
tokio = "1.43.0"
